# wavepacket

./: .gitignore  .readthedocs.yaml  CHANGELOG.rst  Changelog.rst  LICENSE  README.md  README.rst  pyproject.toml
.github/workflows/: ci_testing.yml
demos/schroedinger_cat/1/: demo.ipynb
doc/: architecture.rst  conf.py  getting-started.rst  index.rst  license.rst  representations.rst  requirements.txt
doc/advanced/: ode_solvers.md  pendular_states.md  plane_wave_grid.md  polynomial_solvers.md  thermal_states.md
doc/demos/: pendular_states.md  schroedinger_cat.md  thermal_states.md
doc/tutorials/: chebychev_solvers.md  eigenstates.md  plotting.md  polynomial_solvers.md  relaxation.md  schroedinger_cat.md
src/wavepacket/: __init__.py  exceptions.py  functions.py  generators.py  logging.py  operator_utils.py  state.py  state_utilities.py
src/wavepacket/_utilities/: __init__.py  logging.py
src/wavepacket/builder/: __init__.py  density.py  wave_function.py
src/wavepacket/expression/: __init__.py  expressionbase.py  liouvillian.py  schroedingerequation.py
src/wavepacket/grid/: __init__.py  _utils.py  dof.py  dofbase.py  fbr_transformation.py  grid.py  planewavedof.py  spherical_harmonics_dof.py  state.py  state_utilities.py
src/wavepacket/operator/: __init__.py  _clipping.py  cartesiankineticenergy.py  fbroperators.py  misc_operators.py  operator_utils.py  operatorbase.py  operatorsum.py  operatorutils.py  planewavefbroperator.py  potential1d.py  potentials.py  time_dependent_operators.py
src/wavepacket/plot/: __init__.py  _utilities.py  plot_1d.py  plot_2d.py  stacked_plot_1d.py
src/wavepacket/solver/: __init__.py  chebychev.py  odesolver.py  solverbase.py  tise.py
src/wavepacket/special/: __init__.py  generators.py  pulse_shapes.py
src/wavepacket/testing/: __init__.py  assertions.py  dummydof.py  dummyoperator.py  random.py
src/wavepacket/typing/: __init__.py  data_types.py
src/wavepacket/utils/: __init__.py  exceptions.py  generators.py
test/: conftest.py  test_base_exports.py  test_functions.py  test_generators.py  test_logging.py  test_operator_utilities.py  test_state.py  test_state_utilities.py
test/builder/: test_density.py  test_product_wave_function.py  test_wave_function.py
test/expression/: test_commutatorliouvillian.py  test_expression_sum.py  test_liouvillian.py  test_schroedingerequation.py
test/grid/: test_PlaneWaveDof.py  test_dofbase.py  test_grid.py  test_plane_wave_dof.py  test_plane_wave_transformation.py  test_planewavedof_basics.py  test_planewavedof_transformations.py  test_sphericalharmonicsdof_basics.py  test_sphericalharmonicsdof_transformations.py  test_state.py  test_state_operations.py  test_state_utilities.py
test/operator/: test_clipping.py  test_fbroperator.py  test_fbroperators.py  test_misc_operators.py  test_operator_arithmetic.py  test_operatorbase.py  test_operatorsum.py  test_operatorutils.py  test_planewavefbroperator.py  test_potential1d.py  test_time_dependent_operators.py
test/solver/: test_chebychev.py  test_chebychevsolver.py  test_odesolver.py  test_solverbase.py  test_tise.py
test/special/: test_generators.py  test_pulse_shapes.py
test/utils/: test_generators.py
test_acceptance/: readme  test_1d_absorbing_boundaries.txt  test_2d_harmonic_oscillator.txt  test_laser_pulse_with_density_operator.txt  test_relaxation.txt  test_tise.txt
