[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "wavepacket"
authors = [{ name = "Ulf Lorenz", email = "ulf@wppy.org" }]
readme = "README.rst"
license = { file = "LICENSE" }
requires-python = ">=3.12"
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Topic :: Scientific/Engineering :: Physics"
]
dynamic = ["version", "description"]

dependencies = [
    "numpy >= 2.1.3",
    "scipy >= 1.14.1"
]

[project.urls]
Home = "https://github.com/ulflor/wavepacket"

[project.optional-dependencies]
test = [
    "pytest >= 8.3"
]
doc = [
    "sphinx >= 8.1.3",
    "sphinx-autoapi >= 3.4.0",
    "numpydoc >= 1.8.0",
    "myst-nb >= 1.2",
    "sphinx-rtd-theme >= 3.0.2"
]
demos = [
    "matplotlib >= 3.10"
]
