[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "wavepacket"
authors = [{ name = "Ulf Lorenz" }]
readme = "README.rst"
license = { file = "LICENSE" }
requires-python = ">=3.11"
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Topic :: Scientific/Engineering :: Physics"
]
dynamic = ["version", "description"]

dependencies = [
    "numpy >= 2.1.3",
    "scipy >= 1.14.1",
    "matplotlib >= 3.10"
]

[project.urls]
Home = "https://github.com/ulflor/wavepacket"

[project.optional-dependencies]
doc = [
    "sphinx >= 8.1.3",
    "sphinx-autoapi >= 3.4.0",
    "numpydoc >= 1.8.0",
    "myst-nb >= 1.2",
    "sphinx-rtd-theme >= 3.0.2"
]

[dependency-groups]
test = ["pytest >= 8.3"]
minimum_dependencies = [
    "numpy == 2.1.3",
    "scipy == 1.14.1",
    "matplotlib == 3.10"
]

[tool.tox]
requires = ["tox >= 4.30"]
env_list = ["py311", "py312", "py313", "py314",
            "py311-min", "py312-min", "py313-min"]

[tool.tox.env_run_base]
description = "Run unit tests under {python_base}; Standard environments like py313 implicitly inherit this."
set_env = {"PIP_ONLY_BINARY" = ":all:"}
dependency_groups = ["test"]
commands = [["pytest", "test"]]

[tool.tox.env.py311-min]
dependency_groups = ["minimum_dependencies", "test"]

[tool.tox.env.py312-min]
dependency_groups = ["minimum_dependencies", "test"]

[tool.tox.env.py313-min]
dependency_groups = ["minimum_dependencies", "test"]

